init the servant_jdk11 module